Fix compiler warnings -explicit constructors -raw types -diamond operator -redundant casts
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>